@@ -50,6 +50,12 @@ typedef struct _IWPOOL IWPOOL;
 IW_EXPORT IWPOOL *iwpool_create(size_t siz);
 
 /**
+ * @brief Create empty pool with no preallocated buffer.
+ * @return Pointer to the new pool or `zero` if allocation is failed.
+ */
+IW_EXPORT IWPOOL *iwpool_create_empty(void);
+
+/**
  * @brief Allocates buffer of specified size.
  *
  * @param siz  Size of buffer.
